--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="styles/index.css" />
   </head>
   <body>
+  <!-- run npm install-->
     <%- include('includes/header') %>
     <%- include('includes/aside') %>
     </aside>
